# rv-there-yet-headtracking

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HeadTracking.ini  README.md  THIRD-PARTY-NOTICES.md  launcher-manifest.json  pixi.toml
.github/workflows/: build.yml  release.yml
scripts/: check-fingerprint.ps1  deploy.ps1  fast-debug-load.ps1  ghidra-headless.ps1  install.cmd  install.ps1  nexus-readme.md  package-release.ps1  release-nightly.ps1  scan-uobject-globals.ps1  uninstall.cmd  uninstall.ps1
scripts/ghidra/: disasm_builder_setup.py  disasm_render_candidate.py  find_gpv_vtable.py
src/RVThereYetHeadTracking/: dllmain.cpp  headtracking_mod.cpp  headtracking_mod.h  logging.h  reticle.cpp  reticle.h
src/RVThereYetHeadTracking/builds/: build_profile.h  build_registry.cpp  build_registry.h  gdk_offsets.cpp  steam_offsets.cpp
tests/: Uninstall.Tests.ps1
